# MoriPie-Backend

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
moripie/: cache.py  engine.py  main.py  schedule.py
moripie/database/: __init__.py  db.py  models.py
moripie/services/: service.py
moripie/services/importers/: __init__.py  anidub.py  anifilm.py  anilibria.py  animevost.py  dreamcast.py  importer.py
moripie/services/searchers/: __init__.py  anime365.py  kitsu.py  myanimelist.py  searcher.py  shikimori.py
moripie/utils/: __init__.py  config.py  logger.py
moripie/web/: htmlparser.py  requests.py
