[tool.poetry]
name = "moripie"
version = "25.01.25"
description = "MoriPie ParserEngine"
authors = ["DisZom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
fastapi = "^0.115.7"
apscheduler = "^3.11.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
valkey = {extras = ["libvalkey"], version = "^6.0.2"}
aiohttp = {extras = ["speedups"], version = "^3.11.11"}
orjson = "^3.10.15"
selectolax = "^0.3.27"
rapidfuzz = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
